<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deltabit.bazaar.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bazaar"
            />

        <EditText
            android:id="@+id/txtUsername"
            android:hint="@string/user_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:onClick="btnLogin_click"
            />

        <TextView
            android:onClick="btnCadastrar_onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_not_registered_label"/>


    </LinearLayout>

</FrameLayout>
