<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.deltabit.bazaar.DetailActivity">

    <ImageView
        android:id="@+id/list_item_icon"
        android:layout_width="match_parent"
        android:scaleType="fitCenter"
        android:layout_height="200dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/list_item_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_label"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/list_item_price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_label"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/list_item_quantity_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_label"
            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/list_item_category_spinner"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:focusable="false" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnDelete_onClick"
        android:text="@string/deletar"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnUpdate_onClick"
        android:text="@string/confirmar"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnBuy_onClick"
        android:visibility="gone"
        android:text="@string/comprar" />

    <Button
        android:id="@+id/btnSell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnSell_onClick"
        android:visibility="gone"
        android:text="@string/vender" />

</LinearLayout>
